--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   My name is Sahib - I'm a (junior) systems administrator with a love for automation and operations.
 twitter_username: username
 github_username: perfectly-preserved-pie
-minimal_mistakes_skin: default
+minimal_mistakes_skin: dark
 search: true
 
 # Build settings
