--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 author:
   name   : "Sahib Bhai"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My name is Sahib - I'm a (junior) systems administrator with a love for automation and operations."
+  bio    : "My name is Sahib - I'm a senior systems administrator with a love for automation and operations."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
